apps/skein_compiler/test/skein/conformance/negative/accidental_cross_module_call.skein
-- expect: E0016
-- Agents often try to call functions from another module as if every module were
-- in scope. Cross-module calls are not implicit; expose the behavior through a
-- tool/effect boundary or keep the helper in this module.
module Helpers {
  fn double(x: Int) -> Int { x + x }
}

module Caller {
  fn run() -> Int {
    Helpers.double(21)
  }
}
